@@ -460,24 +460,14 @@
 # support" section. Only one of certificate or PSK encryption support can be
 # enabled for any listener.
 
-# At least one of cafile or capath must be defined to enable certificate based
-# TLS encryption. They both define methods of accessing the PEM encoded
-# Certificate Authority certificates that have signed your server certificate
-# and that you wish to trust.
-# cafile defines the path to a file containing the CA certificates.
-# capath defines a directory that will be searched for files
-# containing the CA certificates. For capath to work correctly, the
-# certificate files must have ".crt" as the file ending and you must run
-# "openssl rehash <path to capath>" each time you add/remove a certificate.
-#cafile
-#capath
+# Both of certfile and keyfile must be defined to enable certificate based
+# TLS encryption.
 
 # Path to the PEM encoded server certificate.
 #certfile
 
 # Path to the PEM encoded keyfile.
 #keyfile
-
 
 # If you wish to control which encryption ciphers are used, use the ciphers
 # option. The list of available ciphers can be optained using the "openssl
@@ -504,6 +494,18 @@
 # connection to proceed. This allows access to the broker to be controlled
 # outside of the mechanisms provided by MQTT.
 #require_certificate false
+
+# cafile and capath define methods of accessing the PEM encoded
+# Certificate Authority certificates that will be considered trusted when
+# checking incoming client certificates.
+# cafile defines the path to a file containing the CA certificates.
+# capath defines a directory that will be searched for files
+# containing the CA certificates. For capath to work correctly, the
+# certificate files must have ".crt" as the file ending and you must run
+# "openssl rehash <path to capath>" each time you add/remove a certificate.
+#cafile
+#capath
+
 
 # If require_certificate is true, you may set use_identity_as_username to true
 # to use the CN value from the client certificate as a username. If this is
