@@ -47,6 +47,8 @@ Broker:
   functions, which can be used by plugins to disconnect clients.
 - Add support for handling $CONTROL/ topics in plugins.
 - Add support for PBKDF2-SHA512 password hashing.
+- Enabling certificate based TLS encryption is now through certfile and
+  keyfile, not capath or cafile.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
